# Lab304-server

./: .gitignore  Base1.0.df  Learn1.0.df  README.md  Show2.0.df  docker-compose.yml  manage.py  manage.sh
DockerFiles/: Base1.0.df  Base3.0.df  Base3.3.df  Learn3.0.df  Learn3.3.df  Learn3.4.df  Learn3.5.df  Learn3.6.5.df  Show3.0.df  Show3.3.df
DockerFiles/ROS1.0/: README.md  ROS1.0.df
DockerFiles/ROS1.0/catkin_ws/src/chickenbot/: CMakeLists.txt  package.xml
DockerFiles/ROS1.0/catkin_ws/src/chickenbot/config/: costmap_common_params.yaml  dwa_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
DockerFiles/ROS1.0/catkin_ws/src/chickenbot/launch/: chicken.launch  chicken_sim.launch  chickenbot.launch  fake_laser.launch  rtls.launch  teleop_keyboard.launch
DockerFiles/ROS1.0/catkin_ws/src/chickenbot/map/: chicken.yaml
DockerFiles/ROS1.0/catkin_ws/src/chickenbot/src/: motor_controller.py  rtls.py
DockerFiles/ROS1.0/catkin_ws/src/fake_laser/: CMakeLists.txt  package.xml
DockerFiles/ROS1.0/catkin_ws/src/my_odom/: CHANGELOG.rst  CMakeLists.txt  package.xml  past_log.txt
DockerFiles/ROS1.0/etc/supervisor/conf.d/: supervisord.conf
DockerFiles/Show1.0/: start.sh
DockerFiles/Show2.0/: start.sh
DockerFiles/Show2.0/.vnc/: xstartup
Show2.0/: start.sh
allhome/guest101/: .bashrc  all.tar
allhome/guest101/.vnc/: xstartup
default_home/: -r  .bashrc.default  .startup.sh
default_home/.vnc/: xstartup
default_home/guest101/: .bashrc  .startup.sh  all.tar
ros_home/: .bashrc.default  .startup.sh
ssh_redir/guest101/: sshpiper_upstream
(+4 files in other folders)
